<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".library.LibraryFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="Library"
        android:textColor="#000000"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/libraryScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginTop="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/libraryScrollLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text=" Currently Reading"
                android:textSize="24sp" />

            <HorizontalScrollView
                android:id="@+id/currentlyReading"
                android:layout_width="match_parent"
                android:layout_height="280dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text=" Wishlist"
                android:textSize="24sp" />

            <HorizontalScrollView
                android:id="@+id/wishlist"
                android:layout_width="match_parent"
                android:layout_height="280dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </HorizontalScrollView>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text=" Read"
                android:textSize="24sp" />

            <HorizontalScrollView
                android:id="@+id/read"
                android:layout_width="match_parent"
                android:layout_height="280dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text=" Backlog"
                android:textSize="24sp" />

            <HorizontalScrollView
                android:id="@+id/backlog"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </HorizontalScrollView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="170dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>