...
    <item
        android:id="@+id/discoverView"
        android:enabled="true"
        android:icon="@drawable/ic_compass"
        android:title="Discover" />
    <item
        android:id="@+id/libraryFragment"
        android:enabled="true"
        android:icon="@drawable/ic_book"
        android:title="Library" />
    <item
        android:id="@+id/chatFragment"
        android:enabled="true"
        android:icon="@drawable/ic_chat_bubble"
        android:title="Chat" />
    <item
...
